# alibaba-cloud-ops-mcp-server

./: LICENSE  README.md  README_zh.md  pyproject.toml
src/alibaba_cloud_ops_mcp_server/: api_meta_client.py  api_tools.py  cms_tools.py  config.py  oos_tools.py  oss_tools.py  server.py
src/alibaba_cloud_ops_mcp_server/alibabacloud/: api_meta_client.py
src/alibaba_cloud_ops_mcp_server/static/: PROMPT_UNDERSTANDING.md  __init__.py
src/alibaba_cloud_ops_mcp_server/tools/: api_tools.py  oos_tools.py
src/alibabacloud_mcp_server/: __init__.py  api_meta_client.py  cms_tools.py  oos_tools.py  server.py
