[project]
name = "alibabacloud-mcp-server"
version = "0.7.1"
description = "A MCP server for Alibaba Cloud"
readme = "README.md"
authors = [
    { name = "Zheng Dayu", email = "dayu.zdy@alibaba-inc.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alibabacloud-cms20190101>=3.1.4",
    "alibabacloud-ecs20140526>=6.1.0",
    "alibabacloud-oos20190601>=3.4.1",
    "click>=8.1.8",
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
dependencies = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alibabacloud_mcp_server"]

[project.scripts]
alibabacloud-mcp-server = "alibabacloud_mcp_server:main"
