[project]
name = "alibaba-cloud-ops-mcp-server"
version = "0.7.6"
description = "A MCP server for Alibaba Cloud"
readme = "README.md"
authors = [
    { name = "Zheng Dayu", email = "dayu.zdy@alibaba-inc.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alibabacloud-cms20190101>=3.1.4",
    "alibabacloud-ecs20140526>=6.1.0",
    "alibabacloud-oos20190601>=3.4.1",
    "alibabacloud_oss_v2>=1.1.0",
    "click>=8.1.8",
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
dependencies = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alibaba_cloud_ops_mcp_server"]

[project.scripts]
alibaba-cloud-ops-mcp-server = "alibaba_cloud_ops_mcp_server:main"
